Added the launching soon title to the blog

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-us'
-title = 'OSINT Halo Bl0g | OSINT Explorer'
+title = 'OSINT Halo Bl0g'
 theme = "LoveIt"
