--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -148,7 +148,7 @@
     
 	# modern SVG favicon to use in place of older style .png and .ico files
     # 更现代的 SVG 网站图标, 可替代旧的 .png 和 .ico 文件
-    svgFavicon = "https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.svg"
+    svgFavicon = "osint_halo_transparent.png"
     
 	# Android browser theme color
     # Android 浏览器主题色
