--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -630,28 +630,35 @@
     # 缩略图 URL
     thumbnailUrl = ""
 
-  # Analytics config
-  # 网站分析配置
-  [params.analytics]
-    enable = false
-    # Google Analytics
+# Analytics config
+# 网站分析配置
+[params.analytics]
+
+    enable = true
+    
+	# Google Analytics
     [params.analytics.google]
-      id = ""
-      # whether to anonymize IP
-      # 是否匿名化用户 IP
-      anonymizeIP = true
-    # Fathom Analytics
+		id = "G-KEJQBQ5N2J"
+		
+		# whether to anonymize IP
+		# 是否匿名化用户 IP
+		anonymizeIP = false
+    
+	# Fathom Analytics
     [params.analytics.fathom]
-      id = ""
-      # server url for your tracker if you're self hosting
-      # 自行托管追踪器时的主机路径
-      server = ""
-    # Plausible Analytics
-    [params.analytics.plausible]
-      dataDomain = ""
-    # Yandex Metrica
-    [params.analytics.yandexMetrica]
-      id = ""
+		id = ""
+		
+		# server url for your tracker if you're self hosting
+		# 自行托管追踪器时的主机路径
+		server = ""
+    
+	# Plausible Analytics
+    	[params.analytics.plausible]
+      	dataDomain = ""
+    
+	# Yandex Metrica
+    	[params.analytics.yandexMetrica]
+      	id = ""
 
   # Cookie consent config
   # Cookie 许可配置
