--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -642,7 +642,7 @@
 		
 		# whether to anonymize IP
 		# 是否匿名化用户 IP
-		anonymizeIP = false
+		anonymizeIP = true
     
 	# Fathom Analytics
     [params.analytics.fathom]
