--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -54,7 +54,7 @@
 
 		# URL of the LOGO
 		# LOGO 的 URL
-		logo = "https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_transparent.png"
+		logo = "https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_circle.png"
 		
 		# title name
 		# 标题名称
@@ -62,7 +62,7 @@
 		
 		# you can add extra information before the name (HTML format is supported), such as icons
 		# 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
-		pre = ""
+		pre = "<span style='margin-left: 0.3rem;'></span>"
 		
 		# you can add extra information after the name (HTML format is supported), such as icons
 		# 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
@@ -152,7 +152,7 @@
     
 	# modern SVG favicon to use in place of older style .png and .ico files
     # 更现代的 SVG 网站图标, 可替代旧的 .png 和 .ico 文件
-    svgFavicon = "osint_halo_transparent.png"
+    svgFavicon = "osint_halo_circle.png"
     
 	# Android browser theme color
     # Android 浏览器主题色
