--- a/config.toml
+++ b/config.toml
@@ -2,3 +2,104 @@ baseURL = 'http://example.org/'
 languageCode = 'en-us'
 title = 'OSINT Halo Bl0g'
 theme = "LoveIt"
+
+# Whether to use emoji code
+# 是否使用 emoji 代码
+enableEmoji = true
+
+# Menu config
+# 菜单配置
+[menu]
+
+	[[menu.main]]
+
+		# weight = 4
+		# identifier = "about"
+	
+		# you can add extra information before the name (HTML format is supported), such as icons
+		# 你可以在名称 (允许 HTML 格式) 之前添加其他信息, 例如图标
+		pre = ""
+	
+		# you can add extra information after the name (HTML format is supported), such as icons
+		# 你可以在名称 (允许 HTML 格式) 之后添加其他信息, 例如图标
+		# post = ""
+
+		# name = "About"
+		# url = "/about/"
+	
+		# title will be shown when you hover on this menu link
+		# 当您将鼠标悬停在此菜单链接上时, 将显示标题
+		# title = "About"
+
+    [[menu.main]]
+
+        weight = 5
+        identifier = "osint_halo_twitter"
+        
+        pre = "<i class='fab fa-twitter fa-fw' aria-hidden='true'></i>"
+        post = ""
+        
+        # name = ""
+        url = "https://twitter.com/OsintHalo"
+
+        title = "OSINT Halo Twitter"
+
+    [[menu.main]]
+
+        weight = 4
+        identifier = "osint_halo_github"
+        
+        pre = "<i class='fab fa-github fa-fw' aria-hidden='true'></i>"
+        post = ""
+        
+        # name = ""
+        url = "https://github.com/OSINT-Halo"
+
+        title = "OSINT Halo Github"
+
+    [[menu.main]]
+
+        weight = 3
+        identifier = "categories"
+        
+        pre = ""
+        post = ""
+        
+        name = "Categories"
+        url = "/categories/"
+
+        title = "Categories"
+
+    [[menu.main]]
+
+        weight = 2
+        identifier = "tags"
+        
+        pre = ""
+        post = ""
+        
+        name = "Tags"
+        url = "/tags/"
+
+        title = "Tags"
+
+    [[menu.main]]
+
+        weight = 1
+        identifier = "posts"
+        
+        pre = ""
+        post = ""
+        
+        name = "Posts"
+        url = "/posts/"
+
+        title = "Posts"
+
+# Author config
+# 作者配置
+[author]
+
+    name = "OSINT Halo"
+    email = "osintearthhalo@gmail.com"
+    link = "/about/"
