--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -70,7 +70,7 @@
 		
 		# whether to use typeit animation for title name
 		# 是否为标题显示打字机动画
-		typeit = false
+		typeit = true
 
 # Footer config
 # 页面底部信息配置
@@ -152,7 +152,7 @@
     
 	# modern SVG favicon to use in place of older style .png and .ico files
     # 更现代的 SVG 网站图标, 可替代旧的 .png 和 .ico 文件
-    svgFavicon = "osint_halo_circle.png"
+    svgFavicon = "https://osint-halo.s3.ap-south-1.amazonaws.com/assets/logos/osint_halo_circle.png"
     
 	# Android browser theme color
     # Android 浏览器主题色
@@ -229,15 +229,19 @@
 		
 		# title shown in home page (HTML format is supported)
 		# 主页显示的网站标题 (支持 HTML 格式)
-		title = "Launching Soon!"
+		title = "Exploring & Learning Open Source Intelligence (OSINT)"
 		
 		# subtitle shown in home page (HTML format is supported)
 		# 主页显示的网站副标题 (允许 HTML 格式)
-		subtitle = ""
+		subtitle = """
+			Hi fellow OSINTer's, welcome to my <b>OSINT</b> blog. I have recently discovered <b>OSINT</b> and I got deeply fascinated by this subject so I have started 
+			my journey to hone my <b>OSINT</b> skills. In this blog, I will share my learnings about <b>OSINT</b> from my <b>Investigations</b> or <b>CTFs</b> (Capture The Flag). 
+			This would be my way to giving back to the <b>OSINT</b> community. I hope you learn something new today.
+		"""
 		
 		# whether to use typeit animation for subtitle
 		# 是否为副标题显示打字机动画
-		typeit = true
+		typeit = false
 		
 		# whether to show social links
 		# 是否显示社交账号
@@ -335,7 +339,7 @@
     RootMe= ""
     Email = "osintearthhalo@gmail.com"
     Phone = ""
-    RSS = ""
+    RSS = "index.xml"
 
 # Page global config
 # 文章页面全局配置
@@ -466,22 +470,23 @@
     [params.page.share]
 
 		enable = true
+
 		Twitter = true
 		Facebook = true
-		Linkedin = false
-		Whatsapp = false
-		Pinterest = false
+		Linkedin = true
+		Whatsapp = true
+		Pinterest = true
 		Tumblr = false
-		HackerNews = true
-		Reddit = false
+		HackerNews = false
+		Reddit = true
 		VK = false
 		Buffer = false
 		Xing = false
-		Line = true
+		Line = false
 		Instapaper = false
 		Pocket = false
 		Flipboard = false
-		Weibo = true
+		Weibo = false
 		Blogger = false
 		Baidu = false
 		Odnoklassniki = false
