Added discord profile link

--- a/themes/LoveIt/config.toml
+++ b/themes/LoveIt/config.toml
@@ -327,7 +327,7 @@
     XMPP = ""
     Matrix = ""
     Bilibili = ""
-    Discord = ""
+    Discord = "osinthalo#6410"
     DiscordInvite = ""
     Lichess = ""
     ORCID = ""
